--- a/src/components/AddButton.css
+++ b/src/components/AddButton.css
@@ -1,3 +1,24 @@
+.currency-box {
+    border-width: 1px;
+    border-radius: 3;
+    border-style: solid;
+    color: black;
+    border-color: black;
+    min-height: 33px;
+    max-width: 435px;
+    margin: auto;
+}
+
+.submit-button{
+    border-style: solid;
+    border-width: 1px;
+    font-size: 20px;
+    font-family: Georgia, serif;
+    height: 90%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 select {
     border: 1px solid black;
     width: 100%;
@@ -32,7 +53,14 @@ select {
 
 .margin {
     margin: 0;
-    font-size: 20px;
+    font-size: large;
     position: relative;
-    top: '20%';
+    top: 30%;
+}
+
+.option-form{
+    min-height: 33px;
+    max-width: 435px;
+    margin: auto;
+    justify-content: center;
 }
